# LiftLog

./: CLAUDE.md
backend-python/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_RUNBOOK.md  Dockerfile  MIGRATION_ROADMAP.md  MOBILE_MIGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend-python/alembic/: env.py
backend-python/alembic/versions/: 001_add_club_tables.py
backend-python/app/: __init__.py  main.py
backend-python/app/api/routes/: ai_workout.py  clubs.py  events.py  follow.py  health.py  inbox.py  metrics.py  shared.py  users.py
backend-python/app/api/websockets/: ai_chat.py
backend-python/app/auth/: password.py  purchase_token.py
backend-python/app/core/: config.py  enums.py  exceptions.py  logging_config.py
backend-python/app/db/: base.py  session.py
backend-python/app/middleware/: __init__.py  metrics.py  request_tracking.py
backend-python/app/models/: __init__.py
backend-python/app/models/database/: __init__.py  club.py  club_event.py  user.py  (+6 more)
backend-python/app/services/: cleanup.py  password.py  rate_limit.py  scheduler.py
backend-python/examples/android-kotlin/: APIService.kt
backend-python/examples/ios-swift/: APIService.swift
backend-python/infrastructure/: README.md
backend-python/infrastructure/scripts/: deploy.sh  rollback.sh
backend-python/infrastructure/terraform/: cloudrun.tf  cloudsql.tf  main.tf  secrets.tf  terraform.tfvars.example
backend-python/scripts/: create-multiple-databases.sh
backend-python/tests/: __init__.py  conftest.py
backend-python/tests/test_api/: test_events.py  test_follow.py  test_inbox.py  test_shared.py  test_users.py
backend-python/tests/test_services/: test_ai_workout.py  test_cleanup.py  test_password.py  test_purchase_verification.py  test_rate_limit.py
(+27 files in other folders)
