[project]
name = "liftlog-api"
version = "2.0.0"
description = "LiftLog API v2 - Privacy-first fitness tracking backend (Python/FastAPI)"
authors = [
    {name = "LiftLog", email = "dev@liftlog.com"}
]
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database - SQLModel combines SQLAlchemy + Pydantic
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Pydantic & Validation
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "email-validator>=2.2.0",

    # Authentication & Security
    "cryptography>=44.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # AI & OpenAI
    "openai>=1.58.1",

    # Purchase Verification
    "google-api-python-client>=2.154.0",
    "httpx>=0.28.1",

    # Utilities
    "python-dotenv>=1.0.1",
    "cuid2>=2.0.1",

    # Background Tasks
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",  # For TestClient
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
